--- a/heater-control-system blueprint.yaml
+++ b/heater-control-system blueprint.yaml
@@ -1,116 +1,168 @@
-alias: heater control system
-variables:
-  heater_switch: input_boolean.heater_on_off
-  temp_on_peak: input_number.temp_on_peak
-  temp_off_peak: input_number.temp_off_peak
-  temp_sensor: sensor.temp_sensor_temperature
-  heater_device: climate.smart_convector_heater
-  precision_factor: input_number.precision_factor
-  on_peak_time: input_datetime.on_peak_time
-  off_peak_time: input_datetime.off_peak_time
-  heater_temp: input_number.heater_temp
-  heater_temp_off_peak: input_number.heater_temp_off_peak
+blueprint:
+  name: Heater Control System
+  description: "Automatically controls a heater based on time (peak/off-peak) and temperature thresholds with hysteresis."
+  domain: automation
+  input:
+    heater_switch:
+      name: Heater On/Off Switch
+      description: "Input boolean to enable/disable the heater system."
+      selector:
+        entity:
+          domain: input_boolean
+    temp_on_peak:
+      name: On-Peak Temperature Setpoint
+      description: "Input number for temperature threshold during on-peak hours."
+      selector:
+        entity:
+          domain: input_number
+    temp_off_peak:
+      name: Off-Peak Temperature Setpoint
+      description: "Input number for temperature threshold during off-peak hours."
+      selector:
+        entity:
+          domain: input_number
+    temp_sensor:
+      name: Temperature Sensor
+      description: "Sensor to monitor current temperature."
+      selector:
+        entity:
+          domain: sensor
+          device_class: temperature
+    heater_device:
+      name: Heater Device
+      description: "Climate entity to control."
+      selector:
+        entity:
+          domain: climate
+    precision_factor:
+      name: Precision Factor
+      description: "Input number for temperature hysteresis range."
+      selector:
+        entity:
+          domain: input_number
+    on_peak_time:
+      name: On-Peak Start Time
+      description: "Input datetime for on-peak period start."
+      selector:
+        entity:
+          domain: input_datetime
+    off_peak_time:
+      name: Off-Peak Start Time
+      description: "Input datetime for off-peak period end."
+      selector:
+        entity:
+          domain: input_datetime
+    heater_temp:
+      name: Heater Target Temperature
+      description: "Input number for heater temperature setpoint."
+      selector:
+        entity:
+          domain: input_number
+    heater_temp_off_peak:
+      name: Off-Peak Heater Temperature
+      description: "Input number for off-peak heater temperature setpoint."
+      selector:
+        entity:
+          domain: input_number
+
 trigger:
   - platform: time
-    at: "{{ states(on_peak_time) }}"
+    at: "{{ state_attr(input.on_peak_time, 'timestamp') | timestamp_custom('%H:%M:%S') }}"
   - platform: time
-    at: "{{ states(off_peak_time) }}"
+    at: "{{ state_attr(input.off_peak_time, 'timestamp') | timestamp_custom('%H:%M:%S') }}"
   - platform: state
     entity_id:
-      - "{{ heater_switch }}"
-      - "{{ temp_on_peak }}"
-      - "{{ temp_off_peak }}"
-      - "{{ temp_sensor }}"
+      - input.heater_switch
+      - input.temp_on_peak
+      - input.temp_off_peak
+      - input.temp_sensor
   - platform: homeassistant
     event: start
-condition: []
+
 action:
   - choose:
       - conditions:
           - condition: state
-            entity_id: "{{ heater_switch }}"
+            entity_id: input.heater_switch
             state: "on"
           - condition: time
-            after: "{{ states(on_peak_time) }}"
-            before: "{{ states(off_peak_time) }}"
+            after: "{{ state_attr(input.on_peak_time, 'timestamp') | timestamp_custom('%H:%M:%S') }}"
+            before: "{{ state_attr(input.off_peak_time, 'timestamp') | timestamp_custom('%H:%M:%S') }}"
           - condition: template
             value_template: >
-              {% set current_temp = states(temp_sensor) | float %}
-              {% set setpoint_on = states(heater_temp) | float %}
-              {{ current_temp > setpoint_on or current_temp < (setpoint_on - states(precision_factor) | float) }}
+              {% set current_temp = states(input.temp_sensor) | float %}
+              {% set setpoint_on = states(input.heater_temp) | float %}
+              {{ current_temp > setpoint_on or current_temp < (setpoint_on - states(input.precision_factor) | float) }}
         sequence:
           - choose:
               - conditions:
                   - condition: template
                     value_template: >
-                      {% set current_temp = states(temp_sensor) | float %}
-                      {% set setpoint_on = states(heater_temp) | float %}
-                      {{ current_temp > setpoint_on and is_state(heater_device, 'on') }}
+                      {{ states(input.temp_sensor) | float > states(input.heater_temp) | float 
+                      and is_state(input.heater_device, 'on') }}
                 sequence:
                   - service: climate.turn_off
-                    data:
-                      entity_id: "{{ heater_device }}"
+                    target:
+                      entity_id: input.heater_device
               - conditions:
                   - condition: template
                     value_template: >
-                      {% set current_temp = states(temp_sensor) | float %}
-                      {% set setpoint_on = states(heater_temp) | float %}
-                      {{ current_temp < (setpoint_on - states(precision_factor) | float) and is_state(heater_device, 'off') }}
+                      {{ states(input.temp_sensor) | float < (states(input.heater_temp) | float - states(input.precision_factor) | float)
+                      and is_state(input.heater_device, 'off') }}
                 sequence:
                   - service: climate.turn_on
-                    data:
-                      entity_id: "{{ heater_device }}"
+                    target:
+                      entity_id: input.heater_device
                   - service: climate.set_temperature
                     data:
-                      entity_id: "{{ heater_device }}"
                       temperature: 30
+                    target:
+                      entity_id: input.heater_device
       - conditions:
           - condition: state
-            entity_id: "{{ heater_switch }}"
+            entity_id: input.heater_switch
             state: "on"
           - condition: template
             value_template: >
               {% set current_time = now().strftime('%H:%M:%S') %}
-              {% set on_time = states(on_peak_time) %}
-              {% set off_time = states(off_peak_time) %}
-              {{ current_time < on_time or current_time > off_time }}
+              {{ current_time < state_attr(input.on_peak_time, 'timestamp') | timestamp_custom('%H:%M:%S')
+              or current_time > state_attr(input.off_peak_time, 'timestamp') | timestamp_custom('%H:%M:%S') }}
           - condition: template
             value_template: >
-              {% set current_temp = states(temp_sensor) | float %}
-              {% set setpoint_off = states(heater_temp_off_peak) | float %}
-              {{ current_temp > setpoint_off or current_temp < (setpoint_off - states(precision_factor) | float) }}
+              {{ states(input.temp_sensor) | float > states(input.heater_temp_off_peak) | float 
+              or states(input.temp_sensor) | float < (states(input.heater_temp_off_peak) | float - states(input.precision_factor) | float) }}
         sequence:
           - choose:
               - conditions:
                   - condition: template
                     value_template: >
-                      {% set current_temp = states(temp_sensor) | float %}
-                      {% set setpoint_off = states(heater_temp_off_peak) | float %}
-                      {{ current_temp > setpoint_off and is_state(heater_device, 'on') }}
+                      {{ states(input.temp_sensor) | float > states(input.heater_temp_off_peak) | float 
+                      and is_state(input.heater_device, 'on') }}
                 sequence:
                   - service: climate.turn_off
-                    data:
-                      entity_id: "{{ heater_device }}"
+                    target:
+                      entity_id: input.heater_device
               - conditions:
                   - condition: template
                     value_template: >
-                      {% set current_temp = states(temp_sensor) | float %}
-                      {% set setpoint_off = states(heater_temp_off_peak) | float %}
-                      {{ current_temp < (setpoint_off - states(precision_factor) | float) and is_state(heater_device, 'off') }}
+                      {{ states(input.temp_sensor) | float < (states(input.heater_temp_off_peak) | float - states(input.precision_factor) | float)
+                      and is_state(input.heater_device, 'off') }}
                 sequence:
                   - service: climate.turn_on
-                    data:
-                      entity_id: "{{ heater_device }}"
+                    target:
+                      entity_id: input.heater_device
                   - service: climate.set_temperature
                     data:
-                      entity_id: "{{ heater_device }}"
                       temperature: 30
+                    target:
+                      entity_id: input.heater_device
       - conditions:
           - condition: state
-            entity_id: "{{ heater_switch }}"
+            entity_id: input.heater_switch
             state: "off"
         sequence:
           - service: climate.turn_off
-            data:
-              entity_id: "{{ heater_device }}"
+            target:
+              entity_id: input.heater_device
+
 mode: single
